Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -739,9 +739,6 @@
                     <h2>Système intelligent avec géolocalisation GPS temps réel pour sauver plus de vies</h2>
                     <p>Géopolice-PHT est la première solution complète de centre d'appels d'urgence avec géolocalisation mobile avancée, spécialement conçue pour les besoins du Burkina Faso.</p>
                     <div class="hero-buttons">
-                        <a href="#demo" class="btn-primary">
-                            <i class="fas fa-play"></i> Voir la démo
-                        </a>
                         <a href="#features" class="btn-secondary">
                             <i class="fas fa-info-circle"></i> En savoir plus
                         </a>
@@ -971,7 +968,7 @@
                         <i class="fas fa-envelope"></i> Nous contacter
                     </a>
                     <a href="tel:+22625000000" class="btn-secondary">
-                        <i class="fas fa-phone"></i> (+226) 25 00 00 00
+                        <i class="fas fa-phone"></i> (+226) 78 67 60 35
                     </a>
                 </div>
             </div>
@@ -1015,8 +1012,8 @@
                     <ul>
                         <li><i class="fas fa-map-marker-alt"></i> Ouagadougou, Burkina Faso</li>
                         <li><i class="fas fa-phone"></i> (+226) 25 00 00 00</li>
-                        <li><i class="fas fa-envelope"></i> contact@geopolice.bf</li>
-                        <li><i class="fas fa-globe"></i> www.geopolice.bf</li>
+                        <li><i class="fas fa-envelope"></i> savadogo.mohamed@gmail.com</li>
+                        <li><i class="fas fa-globe"></i> https://moulaye1188.github.io/portfolio-savadogo/ </li>
                     </ul>
                 </div>
             </div>
@@ -1163,4 +1160,5 @@
         });
     </script>
 </body>
+
 </html>
