--- a/index.html
+++ b/index.html
@@ -964,7 +964,7 @@
                     Rejoignez les centres d'appels d'urgence qui font confiance à Géopolice-PHT pour sauver plus de vies chaque jour.
                 </p>
                 <div style="display: flex; gap: 20px; justify-content: center; flex-wrap: wrap; margin-top: 30px;">
-                    <a href="mailto:contact@geopolice.bf" class="btn-primary">
+                    <a href="mailto:savadogo.mohamed@gmail.com" class="btn-primary">
                         <i class="fas fa-envelope"></i> Nous contacter
                     </a>
                     <a href="tel:+22678676035" class="btn-secondary">
@@ -1011,7 +1011,7 @@
                     <h3>Contact</h3>
                     <ul>
                         <li><i class="fas fa-map-marker-alt"></i> Ouagadougou, Burkina Faso</li>
-                        <li><i class="fas fa-phone"></i> (+226) 25 00 00 00</li>
+                        <li><i class="fas fa-phone"></i> (+226) 78 67 60 35</li>
                         <li><i class="fas fa-envelope"></i> savadogo.mohamed@gmail.com</li>
                         <li><i class="fas fa-globe"></i> https://moulaye1188.github.io/portfolio-savadogo/ </li>
                     </ul>
@@ -1162,4 +1162,5 @@
 </body>
 
 </html>
+
 
